fixed some error in project.html

--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -12,6 +12,7 @@
 <body layout:fragment="content">
 
 <script type="module" src="/js/callDataForTask.js" async></script>
+<script type="module" src="/js/currentLoginUser.js" async></script>
 
 <!-- Spinner Start -->
 <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
@@ -35,64 +36,51 @@
 
         <div class="container-fluid mt-2">
             <!-- nav for task and gantt chart start -->
-            <nav>
-                <ul class="nav nav-tabs d-flex justify-content-between rounded-top" id="myTab" role="tablist">
-                    <div class="nav nav-tabs">
-                        <li class="nav-item" role="presentation">
-                            <button class="nav-link active border-primary border border-bottom-0"
-                                    id="tasks-tab" data-bs-toggle="tab" data-bs-target="#task"
-                                    type="button" role="tab" aria-controls="task" aria-selected="false">
-                                Tasks
-                                <p style="display:none;" th:text="${projectId}" id="projectId"></p>
-                                <p style="display:none;" th:text="${project.getStart_date()}" id="projectStartDate"></p>
-                                <p style="display:none;" th:text="${project.getEnd_date()}" id="projectEndDate"></p>
-                            </button>
-                        </li>
-                        <li class="nav-item" role="presentation">
-                            <button class="nav-link border-primary border border-bottom-0 rounded-top"
-                                    id="gantt-chart-tab" data-bs-toggle="tab" data-bs-target="#gantt-chart" type="button"
-                                    role="tab" aria-controls="gantt-chart" aria-selected="false">
-                                Calendar
-                            </button>
-                        </li>
-                    </div>
-                    <script type="module">
-                        import { getUser } from "/js/currentLoginUser.js";
-
-                        const loginUser = await getUser();
-
-                        if (loginUser.currentUser.role === 'PROJECT_MANAGER') {
-                            // User is a project manager, create and append the li element
-                            const liElement = document.createElement('li');
-                            liElement.className = 'nav-item d-flex align-items-center';
-                            liElement.role = 'presentation';
-                            liElement.id = 'project-open-close-li'; // Optionally add an ID to the li element
-
-                            const inputElement = document.createElement('input');
-                            inputElement.id = 'project-open-close';
-                            inputElement.type = 'checkbox';
-                            inputElement.checked = true;
-                            inputElement.setAttribute('data-toggle', 'toggle');
-                            inputElement.setAttribute('data-on', 'open');
-                            inputElement.setAttribute('data-off', 'closed');
-                            inputElement.setAttribute('data-size', 'xs');
-                            inputElement.setAttribute('data-onstyle', 'success');
-                            inputElement.setAttribute('data-offstyle', 'danger');
-
-                            liElement.appendChild(inputElement);
-
-                            // Append the li element to the parent container (adjust the selector accordingly)
-                            const parentContainer = document.getElementById('myTab');
-                            parentContainer.appendChild(liElement);
-                        }
-                    </script>
-
-                    <!-- <li class="nav-item d-flex align-items-center" role="presentation">
-                        <input  type="checkbox" data-toggle="toggle" data-on="open" data-size="xs" data-off="closed" data-onstyle="success" data-offstyle="danger">
-                        <input id="project-open-close" type="checkbox" checked data-toggle="toggle" data-on="open" data-off="closed" data-size="xs" data-onstyle="success" data-offstyle="danger">
-                    </li> -->
+            <nav class="d-flex justify-content-between align-items-center" id="nav-container">
+                <ul class="nav nav-tabs d-flex  rounded-top" id="myTab" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link active border-primary border border-bottom-0"
+                                id="tasks-tab" data-bs-toggle="tab" data-bs-target="#task"
+                                type="button" role="tab" aria-controls="task" aria-selected="false">
+                            Tasks
+                            <p style="display:none;" th:text="${projectId}" id="projectId"></p>
+                            <p style="display:none;" th:text="${project.getStart_date()}" id="projectStartDate"></p>
+                            <p style="display:none;" th:text="${project.getEnd_date()}" id="projectEndDate"></p>
+                        </button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link border-primary border border-bottom-0 rounded-top"
+                                id="add-employee-tab" data-bs-toggle="tab" data-bs-target="#show-add-employee" type="button"
+                                role="tab" aria-controls="show-add-employee" aria-selected="false">
+                            <i class="bi bi-person-plus-fill"></i>
+                        </button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link border-primary border border-bottom-0 rounded-top"
+                                id="gantt-chart-tab" data-bs-toggle="tab" data-bs-target="#gantt-chart" type="button"
+                                role="tab" aria-controls="gantt-chart" aria-selected="false">
+                            Calendar
+                        </button>
+                    </li>
                 </ul>
-                
+                <script type="module">
+                    import { getCurrentLoginUser } from "/js/currentLoginUser.js";
+                    const loginUser = await getCurrentLoginUser();
+                    if (loginUser.currentUser.role === 'PROJECT_MANAGER') {
+                        const inputElement = document.createElement('input');
+                        inputElement.id = 'project-open-close';
+                        inputElement.type = 'checkbox';
+                        inputElement.checked = true;
+                        inputElement.setAttribute('data-toggle', 'toggle');
+                        inputElement.setAttribute('data-on', 'open');
+                        inputElement.setAttribute('data-off', 'closed');
+                        inputElement.setAttribute('data-size', 'sm');
+                        inputElement.setAttribute('data-onstyle', 'success');
+                        inputElement.setAttribute('data-offstyle', 'danger');
+                        const parentContainer = document.getElementById('nav-container');
+                        parentContainer.appendChild(inputElement);
+                    }
+                </script>
             </nav>
             <!-- nav for task and gantt chart end -->
             <div class="tab-content position-relative" style="height: 600px" id="myTabContent">
@@ -141,6 +129,11 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="tab-pane fade mt-3" id="show-add-employee" role="tabpanel" aria-labelledby="add-employee-tab">
+                    <div id="employee-list"></div>
+                </div>
+
                 <!-- calendar start -->
                 <div class="tab-pane fade mt-3" id="gantt-chart" role="tabpanel" aria-labelledby="gantt-chart-tab">
                     <div id="calendar"></div>
@@ -151,6 +144,32 @@
         </div>
     </div>
     <!-- Content End -->
+
+    <div class="modal fade" id="add-employee-modal" tabindex="-1" data-bs-keyboard="false" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-md" role="document">
+            <div class="modal-content ">
+                <div class="modal-body d-flex flex-column gap-2">
+                    <div class="row row-cols-3">
+                        <div>Name</div>
+                        <div>Role</div>
+                        <div class="text-end"><button type="button" class="btn btn-primary" onclick="toggleInpOn(this)">Select all</button></div>
+                    </div>
+                    <div class="d-flex flex-column gap-2">
+                        <div class="row row-cols-3">
+                            <div>zawlinsehin</div>
+                            <div>Role</div>
+                            <div class="text-end"><input class="pickme" type="checkbox" data-toggle="toggle" checked value="1"></div>
+                        </div>
+                        <div class="row row-cols-3">
+                            <div>ppaaya</div>
+                            <div>Role</div>
+                            <div class="text-end"><input class="pickme" type="checkbox" data-toggle="toggle" checked value="2"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- add task -->
     <div class="modal fade" data-bs-keyboard="true" id="add-task">
