--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -53,6 +53,7 @@
                 </button>
 
                 <div class="d-inline-block">
+                <div class="d-inline-block">
                     <select id="status-filter" class="form-control">
                         <option value="" selected disabled>Status</option>
                         <option value="PENDING">PENDING</option>
