--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -1216,8 +1216,7 @@
                             // Handle non-JSON response
                             console.log('Non-JSON Response:', xhr.responseText);
                         }
-
-                        alert('Error creating issue: ' + xhr.responseText);
+                        showError('Error creating issue: ' + xhr.responseText);
                         console.log('Error creating issue');
                     },
                 });
