--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -1118,34 +1118,45 @@
                                     internal_review_count: internalReviewCount,
                                     external_review_count: externalReviewCount,
                                 };
-                                fetch(
-                                    "/api/review/update-review/" +
-                                        currentProejctDetail.id,
-                                    {
-                                        method: "PUT",
-                                        headers: {
-                                            "Content-Type": "application/json",
-                                        },
-                                        body: JSON.stringify(data),
+                                Swal.fire({
+                                    title: "Are you sure want to edit?",
+                                    icon: "warning",
+                                    showCancelButton: true,
+                                    confirmButtonColor: "#3085d6",
+                                    cancelButtonColor: "#d33",
+                                    confirmButtonText: "Yes"
+                                }).then((result) => {
+                                    if (result.isConfirmed) {
+                                        fetch(
+                                            "/api/review/update-review/" +
+                                            currentProejctDetail.id,
+                                            {
+                                                method: "PUT",
+                                                headers: {
+                                                    "Content-Type": "application/json",
+                                                },
+                                                body: JSON.stringify(data),
+                                            }
+                                        )
+                                            .then((response) => response.json())
+                                            .then((data) => {
+                                                console.log(
+                                                    "Review counts updated successfully:",
+                                                    data
+                                                );
+                                                $("#alert-text").text(
+                                                    "Review counts updated successfully"
+                                                );
+                                                $('#alert-modal').modal('show');
+                                            })
+                                            .catch((error) => {
+                                                console.error(
+                                                    "Error updating review counts:",
+                                                    error
+                                                );
+                                            });
                                     }
-                                )
-                                    .then((response) => response.json())
-                                    .then((data) => {
-                                        console.log(
-                                            "Review counts updated successfully:",
-                                            data
-                                        );
-                                        $("#alert-text").text(
-                                            "Review counts updated successfully"
-                                        );
-                                        $('#alert-modal').modal('show');
-                                    })
-                                    .catch((error) => {
-                                        console.error(
-                                            "Error updating review counts:",
-                                            error
-                                        );
-                                    });
+                                });
                             });
                     }
                     console.log(currentProejctDetail);
@@ -1541,23 +1552,34 @@
                                 ).value
                             ),
                         };
+                        Swal.fire({
+                            title: "Are you sure want to edit?",
+                            icon: "warning",
+                            showCancelButton: true,
+                            confirmButtonColor: "#3085d6",
+                            cancelButtonColor: "#d33",
+                            confirmButtonText: "Yes"
+                        }).then((result) => {
+                            if (result.isConfirmed) {
+                                $.ajax({
+                                    url: `/api/project/update/amount/${projectId}`, // Replace with the actual URL for your project registration endpoint
+                                    type: "PUT",
+                                    data: JSON.stringify(amountDto),
+                                    dataType: "json",
+                                    contentType: "application/json; charset=utf-8",
+                                    success: async function (data) {
 
-                        $.ajax({
-                            url: `/api/project/update/amount/${projectId}`, // Replace with the actual URL for your project registration endpoint
-                            type: "PUT",
-                            data: JSON.stringify(amountDto),
-                            dataType: "json",
-                            contentType: "application/json; charset=utf-8",
-                            success: async function (data) {
-                                
-                                // Reset the form if needed
-                                $('#alert-modal').modal('show');
-                                $("#alert-text").text("Amount Updated Successfully...");
-                            },
-                            error: function (data) {
-                                alert("Error registering project");
-                            },
+                                        // Reset the form if needed
+                                        $('#alert-modal').modal('show');
+                                        $("#alert-text").text("Amount Updated Successfully...");
+                                    },
+                                    error: function (data) {
+                                        alert("Error registering project");
+                                    },
+                                });
+                            }
                         });
+
                     });
             }
 
